[project]
name = "steam-data-extractor"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ipykernel (>=7.1.0,<8.0.0)",
    "steam (>=1.4.4,<2.0.0)",
    "pyspark (>=4.1.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
